[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/PLAYER_UI/status_info.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.415205 )
colors = PoolColorArray( 0, 0, 0, 0.490196 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 128
height = 2

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 3 )
width = 128
height = 2

[node name="status_info" type="Control"]
margin_right = 128.0
margin_bottom = 18.0
rect_min_size = Vector2( 128, 16 )
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
rect_min_size = Vector2( 64, 16 )
color = Color( 0, 0, 0, 0.196078 )

[node name="h_box" type="HBoxContainer" parent="."]
margin_right = 128.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 16 )

[node name="icon" type="Control" parent="h_box"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Sprite" type="Sprite" parent="h_box/icon"]
position = Vector2( 8, 8 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="name" type="Label" parent="h_box"]
margin_left = 20.0
margin_top = 1.0
margin_right = 98.0
margin_bottom = 15.0
text = "Status Effect"

[node name="time" type="Label" parent="h_box"]
margin_left = 102.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 15.0
text = "10s"

[node name="progress" type="TextureProgress" parent="."]
margin_top = 16.0
margin_right = 128.0
margin_bottom = 18.0
rect_min_size = Vector2( 128, 2 )
step = 0.0
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_status_info_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_status_info_mouse_exited"]
